# djogenes

./: Justfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
djogenes/: asgi.py  settings.py  urls.py  wsgi.py
djogenes/core/: admin.py  apps.py  models.py
djogenes/core/migrations/: 0001_initial.py
static/: staticfiles.json
static/bulma/sass/: package-lock.398dda3ddb3b.json  package.88aef4ab0bff.json  style.css  style.css.map
static/css/: site.css
static/js/: onload.7c8d358c0e02.js
